--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,4 +19,13 @@
   <h4>Form example</h4>
   <app-form></app-form>
 </div>
+
+
+
+<app-navbar></app-navbar>
+<app-intro></app-intro>
+<app-courses></app-courses>
+<app-footer></app-footer>
+
+
 <router-outlet></router-outlet>
