usage of pipe and custom pipe

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,6 +24,8 @@
 
 <app-navbar></app-navbar>
 <app-intro></app-intro>
+<app-pipe class="hidden"></app-pipe>
+<h2 class="hidden">The reverse of minihorse5 is {{ "minihorse5" | custompipe }} </h2>
 <app-courses></app-courses>
 <app-footer></app-footer>
 
